--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
         line-height: 24px;
       }
 
+      /* Video pitch and Action */
+      .pitch {
+        padding: 2.5% 0%;
+      }
+      .order {
+        padding: 2% 0%;
+      }
+      .actions {
+        background-color: #343434;
+        padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
+        text-align: center;
+      }
+      .statistics h3, .statistics p {
+        color: white;
+      }
+
       </style>
 </head>
 <body>
@@ -83,5 +101,22 @@
 	<p class="lead">One sentence description.</p>
       </div>
     </div>
+    <div class="row-fluid pitch">
+      <div class="span5 offset1 video">
+	<img class="img-polaroid" src="http://placehold.it/480x300">
+      </div>
+      
+      <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
+      <div class="span5 actions">
+	<div class="span8 offset2">
+	  <div class="statistics">
+	    <div class="span4">
+	      <!-- linediv-l and linediv-r give dividing lines that look 
+	      different in horizontal and vertical layouts, illustrating 
+	      media queries. -->
+	      <div class="linediv-l">
+	      <h3>1000</h3> <p>backers</p>
+	      </div>
+	    </div>
   </body>
 </html>
