--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
         body {
           padding-top: 60px;
         }
+        .linediv-l {
+          border-right: 1px white solid;
+        }
+        .linediv-r {
+          border-left: 1px white solid;
+        }
+      }
+
+      /* Landscape phones and down */
+      @media (max-width: 480px) {
+        .copy {
+          padding: 2.5% 10%;
+        }
+        .linediv-l {
+          border-bottom: 1px white solid;
+        }
+        .linediv-r {
+          border-top: 1px white solid;
+        }
+      }
 
       /* All form factors */
 
@@ -118,5 +138,20 @@
 	      <h3>1000</h3> <p>backers</p>
 	      </div>
 	    </div>
+	    <div class="span4">
+	      <div class="linediv-c">
+		<h3>$6000</h3> <p>of $10,000</p>
+	      </div>
+	    </div>
+	    <div class ="span4">
+	      <div class="linediv-r">
+	      <h3>10</h3> <p>days left</p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<div class="span10 offset1">
+	  <!-- Bootstrap progress bar -->
+	  <!-- http://twitter.github.io/bootstrap/components.html#progress -->
   </body>
 </html>
