--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="navbar-inner">
       <div class="container">
 	<button type="button" class="btn btn-navbar"
-		data-toaale="collapse" data-taraet=".nav-collapse">
+		data-toggle="collapse" data-target=".nav-collapse">
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
