--- a/index.html
+++ b/index.html
@@ -203,9 +203,10 @@
           </div>
           <div class="row-fluid">
           <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-code="ef8185a5cc22971acdc27877180623ec" 
+		data-button-style="custom_large"
+		data-button-text="Preorder With Bitcoin
+		href="https://coinbase.com/checkouts/ef8185a5cc22971acdc27877180623ec">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
