Added missing end quote in bitcoin button text

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <div class="span6 offset3 order">
             <a class="coinbase-button" data-code="ef8185a5cc22971acdc27877180623ec" 
 		data-button-style="custom_large"
-		data-button-text="Preorder With Bitcoin
+		data-button-text="Preorder With Bitcoin"
 		href="https://coinbase.com/checkouts/ef8185a5cc22971acdc27877180623ec">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
