--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
       .footer a {
         color: #ccccff;
       }
+
       /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */
       div.addthis_toolbox {
-        width:180px;
+        width:174px;
         margin: 0 auto;
       }
     </style>
@@ -135,6 +136,7 @@
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
+	      <li><a href="/orders">Orders</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
